# azfx

./: README.md  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml
public/: index.html  manifest.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
